# distcc-bare-metal-builder

./: Dockerfile  README.md  docker-compose.yml  test.sh
.github/workflows/: docker-build.yml
test/: CMakeLists.txt  test.c  toolchain.cmake
